--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,18 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# Environnements
+.env
+.venv
+__pycache__/
+.ipynb_checkpoints/
+
+# Heavy data
+data/
+*.csv
+*.jsonl
+*.zip
+
+# VSCode
+.vscode/
